--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,6 +30,11 @@
     <string name="artistsfragment_title_string">Artists</string>
     <string name="playbackactivity_title_string">Playback</string>
     <string name="playbackservice_label_string">PlaybackService</string>
+    <string name="loginactivity_username_label_string">Username:</string>
+    <string name="loginactivity_password_label_string">Password:</string>
+    <string name="accounttype_string">org.tomahawk</string>
+	<string name="loginactivity_loginbutton_label_string">Login</string>
+	<string name="authenticationdialog_text_string">Authenticating...</string>
     <string-array name="local_collection_menu_items">
         <item >Tracks</item>
         <item >Albums</item>
@@ -43,4 +48,5 @@
     <string-array name="global_collection_menu_items">
         <item >none</item>
     </string-array>
+    </resources>
 </resources>
